# kynothon-openfaas-template

./: LICENSE  README.md
template/asyncRust-http-template/: Dockerfile
template/asyncRust-http-template/function/: Cargo.toml
template/asyncrust-http-template/main/src/: main.rs
template/bento4-python-debian/: Dockerfile
template/bento4-python-debian/function/: handler.py
template/function/src/: lib.rs
template/gstpython-http-template/: Dockerfile  index.py
template/gstpython-http-template/function/: handler.py  tox.ini
template/gstrust-http-template/: Dockerfile  template.yml
template/gstrust-http-template/function/: Cargo.toml
template/gstrust-http-template/function/src/: .lib.rs.swp  lib.rs
template/gstrust-http-template/main/: Cargo.toml
template/gstrust-http-template/main/src/: main.rs
