[package]
name = "main"
version = "0.1.2"
authors = ["Gnaphron <gnaphron@gmail.com>"]
edition = "2021"

[dependencies]
handler = { path = "../function" }
hyper = { version = "0.14", features = [ "server", "stream", "runtime", "http1", "http2" ] }
tokio = { version = "1.13", features = ["rt", "macros"] }
